Fix incorrect path for .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,6 @@ doxygen.conf.bak
 BrawlLib/InternalDocumentation/Module/maps/*.map
 
 # Plugins (Plugins can be placecd in these folders for testing purposes, but should never be included in the program)
-BrawlCrate/BrawlCrate/API/Lib/*.py
-BrawlCrate/BrawlCrate/API/Loaders/*.py
-BrawlCrate/BrawlCrate/API/Plugins/*.py
+BrawlCrate/API/Lib/*
+BrawlCrate/API/Loaders/*
+BrawlCrate/API/Plugins/*
