--- a/doxygen.conf
+++ b/doxygen.conf
@@ -908,10 +908,8 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = "./README.md" \
-                         "./BrawlCrate" \
-                         "./BrawlLib" \
-                         "./Updater"
+INPUT                  = "./BrawlCrate" \
+                         "./BrawlLib"
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -979,7 +977,6 @@ FILE_PATTERNS          = *.c \
                          *.inc \
                          *.m \
                          *.markdown \
-                         *.md \
                          *.mm \
                          *.dox \
                          *.pyw \
@@ -1133,7 +1130,7 @@ FILTER_SOURCE_PATTERNS =
 # (index.html). This can be useful if you have a project on for instance GitHub
 # and want to reuse the introduction page also for the doxygen output.
 
-USE_MDFILE_AS_MAINPAGE = ./BrawlCrate/API/BrawlAPI.md
+USE_MDFILE_AS_MAINPAGE = ./BrawlCrate/API/BrawlAPI.markdown
 
 # The Fortran standard specifies that for fixed formatted Fortran code all
 # characters from position 72 are to be considered as comment. A common
