--- a/BrawlLib/BrawlLib.csproj
+++ b/BrawlLib/BrawlLib.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProductVersion>9.0.30729</ProductVersion>
     <PlatformTarget>x86</PlatformTarget>
@@ -22,8 +22,8 @@
     <Product>BrawlCrateLib</Product>
     <Copyright>Copyright © 2018 - 2023 soopercool101, NuclearNecrosis, Simon381, Onium
 BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Copyright>
-    <AssemblyVersion>0.39.0.0</AssemblyVersion>
-    <FileVersion>0.39.0.0</FileVersion>
+    <AssemblyVersion>0.39.0.1</AssemblyVersion>
+    <FileVersion>0.39.0.1</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <Configurations>Debug;Release;Mono;Canary</Configurations>
@@ -158,7 +158,7 @@ BrawlLib Copyright © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie, Sammi
     <PackageId>BrawlCrateLib</PackageId>
     <Company>BrawlCrateLib</Company>
     <Authors>soopercool101, Simon381, Onium, Bryan Moulton, BlackJax96, libertyernie, Sammi Husky</Authors>
-    <Version>39.0.0</Version>
+    <Version>39.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="CustomLists\FighterList.txt" />
