--- a/BrawlLib/Properties/Settings.settings
+++ b/BrawlLib/Properties/Settings.settings
@@ -59,6 +59,9 @@
     <Setting Name="CameraCtrlRMB" Type="BrawlLib.Internal.Windows.Controls.Model_Panel.ModelPanelViewport.CameraDragAction" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CameraCtrlAltRMB" Type="BrawlLib.Internal.Windows.Controls.Model_Panel.ModelPanelViewport.CameraDragAction" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
     <Setting Name="CameraPanInvertX" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
