--- a/BrawlLib/App.config
+++ b/BrawlLib/App.config
@@ -62,6 +62,9 @@
             <setting name="ShowProgressBars" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ApplyRelocationsAsync" serializeAs="String">
+                <value>True</value>
+            </setting>
         </BrawlLib.Properties.Settings>
     </applicationSettings>
 </configuration>
